..F....... [ZBXNEXT-1407] fixed multiselect alignment in action condition configuration page
git-svn-id: svn://svn.zabbix.com/branches/dev@36419 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-1407/frontends/php/styles/default.css
+++ b/ZBXNEXT-1407/frontends/php/styles/default.css
@@ -67,7 +67,6 @@ table { border-spacing: 0; }
 td, tr { color: inherit; text-decoration: none; padding: 0; }
 .cell { padding: 1px 3px; white-space: nowrap; text-align: left; border: 0; height: 20px; }
 table.cell tr td { padding: 1px; white-space: nowrap; text-align: left; }
-.commonTable tr td { vertical-align: top; }
 
 /* align */
 .floatleft { float: left; }
